@@ -1,3 +1,12 @@
+2012-03-15  Alexander Færøy  <alexander.faeroy@nokia.com>
+
+        [Qt] MiniBrowser scroll indicators should not scroll out of view
+        https://bugs.webkit.org/show_bug.cgi?id=81131
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        * MiniBrowser/qt/qml/ScrollIndicator.qml:
+
 2012-03-14  Chris Fleizach  <cfleizach@apple.com>
 
         AX: ARIA tables need to support selected rows attribute/select rows changed notification
